*SVN*

* follow_redirect doesn't complain about being redirected to the same controller. #5153 [dymo@mk.ukrtelecom.ua]

* Add layout attribute to response object with the name of the layout that was rendered, or nil if none rendered. [Kevin Clark kevin.clark@gmail.com]

* Fix NoMethodError when parsing params like &&. [Adam Greenfield]

* Fix flip flopped logic in docs for url_for's :only_path option. Closes #4998. [esad@esse.at]

* form.text_area handles the :size option just like the original text_area (:size => '60x10' becomes cols="60" rows="10").  [Jeremy Kemper]

* Excise ingrown code from FormOptionsHelper#options_for_select. #5008 [anonymous]

* Small fix in routing to allow dynamic routes (broken after [4242]) [Rick]

    map.connect '*path', :controller => 'files', :action => 'show'

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Use #flush between switching from #write to #syswrite. Closes #4907. [Blair Zajac <blair@orcaware.com>]

* Documentation fix: integration test scripts don't require integration_test. Closes #4914. [Frederick Ros <sl33p3r@free.fr>]

* ActionController::Base Summary documentation rewrite. Closes #4900. [kevin.clark@gmail.com]

* Fix text_helper.rb documentation rendering. Closes #4725. [Frederick Ros]

* Fixes bad rendering of JavaScriptMacrosHelper rdoc (closes #4910) [Frederick Ros]

* Allow error_messages_for to report errors for multiple objects, as well as support for customizing the name of the object in the error summary header. Closes #4186. [andrew@redlinesoftware.com, Marcel Molina Jr.]
  
  error_messages_for :account, :user, :subscription, :object_name => :account

* Enhance documentation for setting headers in integration tests. Skip auto HTTP prepending when its already there. Closes #4079. [Rick Olson]

* Documentation for AbstractRequest. Closes #4895. [kevin.clark@gmail.com] 
